# trace-debugger

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: FAILURE_INDEX.md  tdebug_failure_20260715.md  tdebug_failure_flywheel_20260716.md  tdebug_failure_real_20260715.md
docs/snapshots/: tdebug_failure_20260715.json  tdebug_failure_flywheel_20260716.json  tdebug_failure_real_20260715.json
examples/: publish_failure_snapshot.py  sample_trajectory.json
examples/failure_bundle/: duplicate.json  no_answer.json  offtrack.json  overflow.json  tool_error.json
tests/: test_basic.py
trace_debugger/: __init__.py  __main__.py  analyzer.py  cli.py  reader.py  reporter.py
